Rename title to name
