# apps/otoge-bookmark-frontend/src/lib/api/games/_id@string/index.ts
@@ -4,7 +4,7 @@ import type * as Types from '../../@types'
 export type Methods = {
   get: {
     status: 200
-    resBody: Types.GameEntity
+    resBody: Types.GameWithSongsEntity
   }
 
   patch: {
